--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "devDependencies": {
     "grunt": "~0.4.2",
-    "grunt-contrib-sass": "~0.5.1"
+    "grunt-contrib-sass": "~0.5.1",
+    "grunt-contrib-jshint": "~0.7.2"
   }
 }
